<resources>
    <string name="app_name">Safe Authenticator</string>
    <string name="assets">Assets</string>
    <string name="transactions">Transactions</string>
    <string name="get_started">Get Started</string>
    <string name="connect_title">Connect to a Safe</string>
    <string name="connect_description">Copy-paste the Safe address or click on “Receive” in the web interface to scan the code with your phone</string>
    <string name="safe_address_hint">Safe address (0x...)</string>
    <string name="invalid_ethereum_address">Invalid Ethereum address</string>
    <string name="unknown_safe_address">Unknown Safe address</string>
    <string name="unknown_server_error">Unknown server error</string>
    <string name="unknown_error">An error occurred</string>
    <string name="error_check_internet_connection">Please make sure to have an internet connection.</string>
    <string name="error_ssl_handshake">Please check whether the time is correctly set.</string>
    <string name="no_allowances_title">No allowances set</string>
    <string name="no_allowances_message">To enable instant transfers for this device, go to https://gnosis-safe.io and set an allowance.</string>
    <string name="no_balances_title">No token balances</string>
    <string name="no_balances_message">When you send tokens to your Safe they will appear here.</string>
    <string name="no_transactions_title">No Safe transactions yet</string>
    <string name="no_transactions_message">New transactions will show up here.</string>
    <string name="no_instant_transfers_title">No Instant Transfers yet</string>
    <string name="no_instant_transfers_message">New Instant Transfers will show up here.</string>
    <string name="device_id">Device ID</string>
    <string name="copy_to_clipboard">Copy to clipboard</string>
    <string name="channel_name_wallet_connect_requests">WalletConnect requests</string>
    <string name="channel_description_wallet_connect_requests">Requests from WalletConnect sessions</string>
    <string name="channel_name_wallet_connect_sessions">WalletConnect updates</string>
    <string name="channel_description_wallet_connect_sessions">Updates for WalletConnect sessions</string>
    <string name="notification_new_transaction_request">New transaction request to review</string>
    <string name="unknown_dapp">Unknown Dapp</string>
    <string name="instant_transfer_review_message">Please review the transaction details.  After submitting, the transaction will be processed immediately.</string>
    <string name="instant_transfer_address_message">Enter the destination address for this transaction. Scan a QR code or paste from clipboard.</string>
    <string name="instant_transfer_value_message">Select the amount of %s you would like to transfer.</string>
    <string name="instant_transfer_value_message_placeholder">Select the amount you would like to transfer.</string>
    <string name="address_input_hint">Enter Address</string>
    <string name="search_hint">Search</string>
    <string name="amount_hint">Amount</string>
    <string name="invalid_amount">Invalid amount entered</string>
    <string name="amount_too_high">Entered amount is too high</string>
    <string name="available_allowance">Available allowance: %s</string>
    <string name="label_recipient">Recipient</string>
    <string name="label_amount">Amount</string>
    <string name="action_confirm">Confirm</string>
    <string name="action_check_address">Check address</string>
    <string name="action_continue">Continue</string>
    <string name="action_submit">Submit</string>
    <string name="action_execute_external">Execute with external wallet</string>
    <string name="action_confirm_external">Confirm with external wallet</string>
</resources>
