<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/assets_refresh"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/assets_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:padding="8dp"
            tools:listitem="@layout/item_pending_tx" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/assets_empty_views"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:constraint_referenced_ids="assets_empty_title,assets_empty_message"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/assets_empty_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/no_allowances_title"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/assets_empty_message"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/no_allowances_message"
            android:textSize="14sp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/assets_empty_title"
            tools:visibility="visible" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/assets_qr_views"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:constraint_referenced_ids="assets_device_id_title,assets_device_qr,assets_copy_btn"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/assets_device_id_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:text="@string/device_id"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/assets_device_qr"
            app:layout_constraintTop_toBottomOf="@id/assets_empty_message"
            app:layout_constraintVertical_chainStyle="packed" />

        <ImageView
            android:id="@+id/assets_device_qr"
            android:layout_width="144dp"
            android:layout_height="144dp"
            android:background="@drawable/qr_background"
            android:padding="8dp"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toTopOf="@id/assets_copy_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/assets_device_id_title" />

        <TextView
            android:id="@+id/assets_copy_btn"
            style="@style/PrimaryButton"
            android:layout_width="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/copy_to_clipboard"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/assets_device_qr" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
