<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/connect_safe_back_btn"
        style="@style/BackButton"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/connect_safe_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:gravity="center"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:text="@string/connect_title"
        android:textColor="@color/secondaryText"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/connect_safe_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:paddingStart="48dp"
        android:paddingEnd="48dp"
        android:text="@string/connect_description"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/connect_safe_address_input"
        app:layout_constraintTop_toBottomOf="@id/connect_safe_title"
        app:lineHeight="20sp" />

    <pm.gnosis.blockies.BlockiesImageView
        android:id="@+id/connect_safe_address_ident"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/connect_safe_address_input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/connect_safe_address_input" />

    <EditText
        android:id="@+id/connect_safe_address_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@null"
        android:hint="@string/safe_address_hint"
        android:lines="2"
        android:digits="0123456789ABCDEFabcdefxX"
        app:layout_constraintBottom_toTopOf="@id/connect_safe_status_container"
        app:layout_constraintEnd_toStartOf="@id/connect_safe_address_scan"
        app:layout_constraintStart_toEndOf="@id/connect_safe_address_ident"
        app:layout_constraintTop_toBottomOf="@id/connect_safe_description"
        app:layout_goneMarginStart="24dp" />

    <ImageView
        android:id="@+id/connect_safe_address_scan"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/selectable_background"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="@id/connect_safe_address_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/connect_safe_address_input"
        app:srcCompat="@drawable/ic_scan" />

    <View
        android:id="@+id/connect_safe_input_underline"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:background="@color/colorPrimary"
        app:layout_constraintTop_toBottomOf="@id/connect_safe_address_input" />

    <LinearLayout
        android:id="@+id/connect_safe_status_container"
        android:layout_width="match_parent"
        android:layout_height="96dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/connect_safe_submit_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/connect_safe_address_input">

        <ImageView
            android:id="@+id/connect_safe_address_status_icon"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/selectable_background"
            android:tint="@color/valid"
            android:visibility="gone"
            app:srcCompat="@drawable/ic_check_circle_24dp"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/connect_safe_address_status_text"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:gravity="top|center_horizontal"
            android:text="Valid Safe address"
            android:textSize="16sp"
            android:visibility="gone"
            tools:visibility="visible" />

        <ProgressBar
            android:id="@+id/connect_safe_progress"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:visibility="gone" />
    </LinearLayout>

    <TextView
        android:id="@+id/connect_safe_submit_btn"
        style="@style/PrimaryButton"
        android:layout_width="wrap_content"
        android:layout_marginBottom="64dp"
        android:text="@string/confirm_action"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
