<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/instant_transfer_address_input_header_bg"
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_height"
        android:background="@color/secondaryHeader"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/instant_transfer_address_input_back_btn"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/selectable_background"
        android:padding="16dp"
        android:tint="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_arrow_back_24dp" />

    <TextView
        android:id="@+id/instant_transfer_address_input_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:text="Instant"
        android:textColor="@color/colorPrimary"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/instant_transfer_address_input_sub_title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/instant_transfer_address_input_sub_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:text="Transfer"
        android:textColor="@color/secondaryText"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="@id/instant_transfer_address_input_header_bg"
        app:layout_constraintTop_toBottomOf="@id/instant_transfer_address_input_title"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/instant_transfer_address_input_hint_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:minHeight="104dp"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:text="@string/instant_transfer_address_message"
        android:textColor="@color/secondaryText"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/instant_transfer_address_input_header_bg"
        app:layout_constraintVertical_chainStyle="packed" />

    <View
        android:id="@+id/instant_transfer_address_input_hint_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider"
        app:layout_constraintTop_toBottomOf="@id/instant_transfer_address_input_hint_text" />

    <pm.gnosis.blockies.BlockiesImageView
        android:id="@+id/instant_transfer_address_input_recipient_ident"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/instant_transfer_address_input_recipient_input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/instant_transfer_address_input_recipient_input" />

    <TextView
        android:id="@+id/instant_transfer_address_input_recipient_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:background="@drawable/selectable_background"
        android:gravity="center_vertical"
        android:lines="2"
        android:text="@string/address_input_hint"
        android:textColor="@color/mediumGrey"
        android:padding="8dp"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/instant_transfer_address_input_continue_btn"
        app:layout_constraintEnd_toStartOf="@id/instant_transfer_address_input_recipient_scan"
        app:layout_constraintStart_toEndOf="@id/instant_transfer_address_input_recipient_ident"
        app:layout_constraintTop_toBottomOf="@id/instant_transfer_address_input_hint_divider"
        app:layout_goneMarginStart="24dp" />

    <ImageView
        android:id="@+id/instant_transfer_address_input_recipient_scan"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/selectable_background"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="@id/instant_transfer_address_input_recipient_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/instant_transfer_address_input_recipient_input"
        app:srcCompat="@drawable/ic_scan" />

    <View
        android:id="@+id/connect_safe_input_underline"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:background="@color/colorPrimary"
        app:layout_constraintTop_toBottomOf="@id/instant_transfer_address_input_recipient_input" />

    <TextView
        android:id="@+id/instant_transfer_address_input_continue_btn"
        style="@style/PrimaryButton"
        android:layout_width="wrap_content"
        android:layout_margin="8dp"
        android:enabled="false"
        android:text="@string/action_continue"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/instant_transfer_address_input_steps"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <io.gnosis.safe.authenticator.ui.views.CirclePageIndicator
        android:id="@+id/instant_transfer_address_input_steps"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
